tests/invalid/let_without_type_or_initializer.wio
fn Entry(args: string[]) -> i32 {
    let value;
    return 0;
}
